# cs-crawler-mcp

./: .cursorrules  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  config.json.template  cs-crawler-mcp  docker-compose.yml  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
.cursor/: CURSOR-INTEGRATION.md  QUICKSTART.md
.cursor/agents/: README.md
.cursor/agents/community/: instructions.md  rules.md
.cursor/agents/community/context/: agent-awareness.md
.cursor/agents/concierge/: instructions.md  rules.md
.cursor/agents/concierge/context/: agent-awareness.md
.cursor/agents/lifecycle/: instructions.md  rules.md
.cursor/agents/lifecycle/context/: agent-awareness.md
.cursor/agents/repository-manager/: instructions.md  rules.md
.cursor/agents/repository-manager/context/: agent-awareness.md
.cursor/agents/scribe/: instructions.md  rules.md
.cursor/agents/scribe/context/: agent-awareness.md
.cursor/agents/triage/: instructions.md  rules.md
.cursor/agents/triage/context/: agent-awareness.md
.cursor/shared-context/: communication-protocols.md  guiding-principles.md
.github/: README.md
.github/workflows/: ci.yml  docker.yml  pages.yml
docs/: CHANGELOG.md  DEPLOYMENT.md  index.md
examples/: advanced_usage.py  basic_usage.py  claude_desktop_examples.md
scripts/: install.sh
tests/: test_wrapper.py
